# lab02-1

./: CMakeLists.txt  Nuevo documento de texto.txt  README.md  ejem2.pgm  main  main.cpp
